dockerfile and dokcer-compose file

--- a/certimax-laravel/Dockerfile
+++ b/certimax-laravel/Dockerfile
@@ -1,19 +1,18 @@
 #Image Ubuntu 18
 FROM ubuntu:20.04
-MAINTAINER bananadevs
+MAINTAINER certimax
 #update ubuntu software repository
 ENV TZ 'America/La_Paz'
 RUN apt update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends tzdata
 RUN rm /etc/localtime
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime
 RUN dpkg-reconfigure -f noninteractive tzdata
-RUN DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends openjdk-8-jdk
 # install curl https transport git zip
 RUN apt install -y curl apt-transport-https git zip software-properties-common
 #install php 7.4
-RUN apt install -y php7.4 php7.4-fpm php7.4-cli php7.4-common php7.4-pgsql php7.4-zip php7.4-mbstring \
+RUN apt install -y php7.4 php7.4-cli php7.4-common php7.4-json php7.4-opcache php7.4-readline php7.4-mysql php7.4-fpm \
+php7.4-mbstring \
 php7.4-xml \
-php7.4-json \
 php7.4-phar \
 php7.4-gd \
 php7.4-curl \
@@ -24,25 +23,25 @@ php7.4-snmp
 RUN apt install -y nano
 RUN apt install -y nginx
 RUN rm /etc/nginx/sites-enabled/default
-COPY code/nginx/vhosts/prodvhostlaravel /etc/nginx/sites-available/prodvhostlaravel
+COPY nginx/vhosts/prodvhostlaravel /etc/nginx/sites-available/prodvhostlaravel
 RUN ln -s /etc/nginx/sites-available/prodvhostlaravel /etc/nginx/sites-enabled/
 RUN rm -r /var/www/html/
 RUN mkdir -p /etc/ssl/certs/
 RUN mkdir -p /etc/ssl/private/
-COPY code/nginx/ssl/localhost.crt /etc/ssl/certs/localhost.crt
-COPY code/nginx/ssl/localhost.key /etc/ssl/private/localhost.key
+COPY nginx/ssl/localhost.crt /etc/ssl/certs/localhost.crt
+COPY nginx/ssl/localhost.key /etc/ssl/private/localhost.key
 WORKDIR /var/www/
 #install composer
 RUN curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/ && ln -s /usr/local/bin/composer.phar /usr/local/bin/composer
-COPY code/./ /var/www/
-COPY code/nginx/env /var/www/.env
-COPY code/composer.json /var/www/
-COPY code/composer.lock /var/www/
+COPY ./ /var/www/
+COPY nginx/env /var/www/.env
+COPY composer.json /var/www/
+COPY composer.lock /var/www/
 RUN chown -R www-data:www-data /var/www/
 RUN chmod -R 777 storage bootstrap
 RUN composer install
 RUN php artisan config:cache
-RUN php artisan migrate:refresh --seed
+# RUN php artisan migrate:refresh --seed
 RUN php artisan storage:link
 EXPOSE 80 443
 #daemon nginx
