--- a/dart-xpx-chain-sdk/pubspec.yaml
+++ b/dart-xpx-chain-sdk/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   xpx_crypto: '^0.0.2+2'
   convert: '^2.1.1'
   flat_buffers: '^1.11.0'
+  shelf_router: '^0.7.3'
 
 dev_dependencies:
   build_runner: any
